src/test/deca/context/valid/created/bonne-signature-redefinition.deca
class A {
	int salut(int a){
		return a;
	}
}
class B extends A{}
class C extends B{
	int salut(int a){
		return a;
	}
}
