src/test/deca/context/invalid/created/redefinition-heritage-ordre2.deca
class A{
	void salut(int a){}
}
class B extends A{}
class C extends B{
	void salut(int a, int b){}
}